2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.SourceEditor.addin.xml: Bump MD version.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	  Flush.

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj: Reference mono-cairo
	  package.

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Add null
	  check.

2009-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  550882 - ArgumentNull Exception when removing a breakpoint'.

2009-10-22  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor.OptionPanels/GeneralOptionsPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	  Fixed the dialog.

2009-10-22  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor.OptionPanels/GeneralOptionsPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	  Added option to turn off parameter insight.

2009-10-21  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.SourceEditor.GotoLineNumberWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.MarkerPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	  Added missing check button.

2009-10-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor.OptionPanels/MarkerPanel.cs:
	* MonoDevelop.SourceEditor/StyledSourceEditorOptions.cs: Added
	  enable animations option.

2009-10-14  Michael Hutchinson  <mhutchinson@novell.com>
